<?xml version='1.0' encoding='utf-8'?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.chua</groupId>
    <artifactId>utils-support-core-parent</artifactId>
    <version>4.0.0.42</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>com.chua</groupId>
        <artifactId>utils-support-parent-starter</artifactId>
        <version>4.0.0.42</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <modules>
        <module>utils-support-common-starter</module>
        <module>utils-support-datasource-starter</module>
        <module>utils-support-network-starter</module>
        <module>utils-support-spring-starter</module>
        <module>utils-support-springboot-starter</module>
        <module>utils-support-osgi-starter</module>
        <module>utils-support-payment-starter</module>
        <module>utils-support-auth-starter</module>
        <module>utils-support-spider-starter</module>
        <module>utils-support-deeplearning-starter</module>
        <module>utils-support-filesystem-starter</module>
        <module>utils-support-maven-starter</module>
    </modules>
    <properties>
        <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
        <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.chua</groupId>
                <artifactId>utils-support-datasource-starter</artifactId>
                <version>${project.version}</version>
            </dependency>


            <dependency>
                <groupId>com.chua</groupId>
                <artifactId>utils-support-deeplearning-starter</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.chua</groupId>
                <artifactId>utils-support-filesystem-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <release>25</release>
                        <compilerArgs>
                            <arg>--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                            <arg>--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                            <arg>--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                            <arg>--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>

                            <path>
                                <groupId>com.uber.nullaway</groupId>
                                <artifactId>nullaway</artifactId>
                                <version>${nullaway.version}</version>
                            </path>

                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven.source.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <!-- GraalVM native                                                  -->
    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.10.4</version>
                        <configuration>
                            <!--                                               -->
                            <agent>
                                <enabled>true</enabled>
                                <options>
                                    <option>experimental-class-loader-support</option>
                                </options>
                            </agent>
                            <!--        native-image              -->
                            <buildArgs>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>--enable-url-protocols=http,https</buildArg>
                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                <!--                    SPI        -->
                                <buildArg>--initialize-at-build-time=org.slf4j</buildArg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>
    </dependencies>
</project>


